2007-07-04  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/Appointments/SOGoCalendarComponent.m
	([SOGoCalendarComponent -contentAsString]): we return the content
	based on the permissions returned by the security manager instead
	of by looking at the user roles.

	* SoObjects/Appointments/SOGoAppointmentFolder.m
	([SOGoAppointmentFolder -calendarFolders]): read the calendar
	folders of the user to whom this folder belongs instead of the
	active user. This way, a delegate user will be able to have the
	same view that the original user has if he connects from his user
	directory.

	* Main/SOGo.m ([SOGo -lookupUser:_keyinContext:]): check if the
	user exists before creating the SOGoUserFolder instance. If not,
	returns nil.

	* UI/MailerUI/UIxMailSourceView.[hm]: new class module designed to
	return the message source code in plain text.

	* SoObjects/Mailer/SOGoMailObject.m ([SOGoMailObject
	-contentAsString]): returns the message encoded in UTF8.

2007-07-03  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* OGoContentStore/iCalRepeatableEntityObject+OCS.m
	([iCalRepeatableEntityObject -cycleInfo]): no longer take the
	leading tagname into account when serializing the element values.

	* Main/SOGoProductLoader.m: only load bundle directories ending
	with the "SOGo" extension.

	* Main/SOGo.m ([SOGo
	-_checkTableWithCM:cmtableURL:urlandType:tableType]): empty the
	result set if the query has caused no exception. Otherwise we get
	an "evaluation is in progress exception".

2007-06-29  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/SOGo/AgenorUserDefaults.m ([AgenorUserDefaults
	-generateSQLForInsert]): initialize error to nil before the
	serialization. Otherwise the method can get confused if it ever is
	initialized to something else.

	* SoObjects/SOGo/SOGoUserFolder.m ([SOGoUserFolder
	-folderIsMandatory]): returns NO unconditionnally.

	* SoObjects/Contacts/SOGoContactFolders.m ([SOGoContactFolders